--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "jquery-datepick",
   "version": "4.1.0",
-  "main": "jquery.datepick.js"
+  "main": "jquery.datepick.js",
+  "private": true
 }
