--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "jquery-datepick",
   "version": "4.1.1-0",
   "main": "jquery.datepick.js",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "jquery": "^1.11.0"
+  }
 }
