--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery-datepick",
+  "name": "kbwood-jquery-datepick",
   "version": "4.1.2-0",
   "main": "jquery.datepick.js",
   "private": true,
